Fix alignment

--- a/source/css/components/ui/ui-button.styl
+++ b/source/css/components/ui/ui-button.styl
@@ -71,14 +71,13 @@ for key, val in $color
   height: 60px
   font-size: $font-size.x-large
 
-
 // Circular Buttons
 // ----------------
 
 .ui-button.-circular
   padding: 0
-  width: 40px
-  height: 40px
+  width: 38px
+  height: 38px
   border-radius: 100%
   line-height: 0
   position: relative
