--- a/source/css/components/ui/ui-input.styl
+++ b/source/css/components/ui/ui-input.styl
@@ -2,7 +2,7 @@
   display: block
   width: 100%
   background-color: #fff
-  padding: 7px
+  padding: 9px 7px
   font-size: $font-size.normal
   border: 1px solid $color.gray-dark
   border-radius: 3px
